Header e footer finalizados

--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar class="header mat-elevation-z8">
     <span>
-        <img src="assets/img/logo-header1.jpg" alt="logo">
+        <img class="imagem-logo" src="assets/img/logo-header1.jpg" alt="logo">
     </span>
     <span>
-        <h1>Tarefas</h1>
+        <h1 class="titulo-logo">Tarefas</h1>
     </span>
 </mat-toolbar>
 
