--- a/Frontend/src/app/components/header/header.component.css
+++ b/Frontend/src/app/components/header/header.component.css
@@ -11,6 +11,10 @@
 .titulo-logo {
     font-family: 'Pacifico', cursive;
     padding-left: 1.2rem;
+    color: darkslategrey;
+    font-weight: 600;
+    font-size: 2rem;
+    margin: 0;
 }
 
 span {
