Listando todas as tarefas

--- a/Frontend/src/app/components/section/section.component.html
+++ b/Frontend/src/app/components/section/section.component.html
@@ -2,12 +2,12 @@
     <button class="tarefa-finalizada mat-elevation-z8" mat-stroked-button color="warn">TAREFAS FINALIZADAS</button>
     <button class="nova-tarefa mat-elevation-z8" mat-stroked-button color="accent">NOVA TAREFA</button>
 
-    <div class="content conteudo">
+    <div class="content" *ngFor="let item of list">
         <mat-card class="mat-elevation-z8">
-            <p class="conteudo-data">Data para finalizar:</p>
+            <p class="conteudo-data">Data para finalizar: {{ item.dataFinalizacao }}</p>
             <mat-card-header>
-                <mat-card-title>DoG</mat-card-title>
-                <mat-card-subtitle>dog friend</mat-card-subtitle>
+                <mat-card-title>{{ item.titulo }}</mat-card-title>
+                <mat-card-subtitle>{{ item.descricao }}</mat-card-subtitle>
             </mat-card-header>
 
             <div class="actions">
