Listando somente o nao finalizados

--- a/Frontend/src/app/components/section/section.component.html
+++ b/Frontend/src/app/components/section/section.component.html
@@ -1,6 +1,10 @@
 <div class="container">
-    <button class="tarefa-finalizada mat-elevation-z8" mat-stroked-button color="warn">TAREFAS FINALIZADAS</button>
-    <button class="nova-tarefa mat-elevation-z8" mat-stroked-button color="accent">NOVA TAREFA</button>
+    <div >
+        <button matBadge="{{ count}}" class="tarefa-finalizada mat-elevation-z8" mat-stroked-button color="warn">TAREFAS FINALIZADAS</button>
+    </div>
+    <div>
+        <button class="nova-tarefa mat-elevation-z8" mat-stroked-button color="accent">NOVA TAREFA</button>
+    </div>
 
     <div class="content" *ngFor="let item of list">
         <mat-card class="mat-elevation-z8">
