--- a/Frontend/src/app/components/section/section.component.html
+++ b/Frontend/src/app/components/section/section.component.html
@@ -15,10 +15,10 @@
             </mat-card-header>
 
            <div class="actions">
-                <button mat-mini-fab color="primary">
+                <button (click)="finalizarTarefa(item)" mat-mini-fab color="primary">
                     <mat-icon>done</mat-icon>
                 </button>
-                <button mat-mini-fab color="accent">
+                <button routerLink="update/{{ item.id }}" mat-mini-fab color="accent">
                     <mat-icon>edit</mat-icon>
                 </button>
                 <button (click)="delete(item.id)" mat-mini-fab color="warn">
